Create CopytoClipboard func & Install Fontawesome

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Password Generator</title>
 </head>
 
@@ -29,6 +31,8 @@
                             <textarea class="form-control" id="password" rows="3" readonly></textarea>
                         </div>
                         <button class="btn btn-secondary" onclick="copyToClipboard()">Copy to Clipboard</button>
+                        <i id="tick" class="fas fa-check ml-2" style="display: none; color: green;"></i>
+                        </button>
                     </div>
                 </div>
             </div>
