Remove resizing of textarea

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                         <br>
                         <br>
                         <div class="form-group">
-                            <textarea class="form-control" id="password" rows="3" readonly></textarea>
+                            <textarea class="form-control" id="password" rows="3" readonly
+                                style="resize: none;"></textarea>
                         </div>
                         <button class="btn btn-secondary" onclick="copyToClipboard()">Copy to Clipboard</button>
                         <i id="tick" class="fas fa-check ml-2" style="display: none; color: green;"></i>
