--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Password Generator</title>
+    <title>PassMint</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
             <div class="col-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Password Generator</h5>
+                        <h5 class="card-title text-center">PassMint</h5>
                         <div class="form-group">
                             <select class="form-control" id="length">
                                 <option>16</option>
@@ -32,7 +32,7 @@
                                 style="resize: none;"></textarea>
                         </div>
                         <button class="btn btn-secondary" onclick="copyToClipboard()">Copy to Clipboard</button>
-                        <i id="tick" class="fas fa-check ml-2" style="display: none; color: green;"></i>
+                        <i id="tick" class="fas fa-check ml-2" style="display: none; color: rgb(40, 214, 40);"></i>
                         </button>
                     </div>
                 </div>
