--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title text-center">PassMint</h5>
+                        <br>
+                        <p>How many characters would you like to generate?</p>
                         <div class="form-group">
                             <select class="form-control" id="length">
                                 <option>16</option>
@@ -28,7 +30,7 @@
                         <br>
                         <br>
                         <div class="form-group">
-                            <textarea class="form-control" id="password" rows="3" readonly
+                            <textarea class="form-control" id="password" rows="6" readonly
                                 style="resize: none;"></textarea>
                         </div>
                         <button class="btn btn-secondary" onclick="copyToClipboard()">Copy to Clipboard</button>
