--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="row justify-content-center align-items-center" style="height:100vh">
-            <div class="col-4">
+            <div class="col-6 col-sm-8 col-md-9 col-lg-8">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title text-center">PassMint</h5>
