Implement SEO strategies

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
 
 <head>
+    <meta property="og:title" content="MintPass">
+    <meta property="og:description" content="MintPass is a password generator page with ease of access.">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="https://mintpass.me">
+    <meta name="description" content="MintPass is a password generator page with ease of access.">
+    <meta name="keywords" content="password, generator, passgen, password generator, MintPass">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
