Change page colour scheme and create media query

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                                 <option>128</option>
                             </select>
                         </div>
-                        <button class="btn btn-primary" onclick="generate()">Generate</button>
+                        <button class="btn btn-custom" onclick="generate()">Generate</button>
                         <br>
                         <br>
                         <div class="form-group">
                             <textarea class="form-control" id="password" rows="6" readonly
                                 style="resize: none;"></textarea>
                         </div>
-                        <button class="btn btn-secondary" onclick="copyToClipboard()">Copy to Clipboard</button>
-                        <i id="tick" class="fas fa-check ml-2" style="display: none; color: rgb(40, 214, 40);"></i>
+                        <button class="btn btn-custom" onclick="copyToClipboard()">Copy to Clipboard</button>
+                        <i id="tick" class="fas fa-check ml-2" style="display: none; color: #FFFFFF;"></i>
                         </button>
                     </div>
                 </div>
