Add customizable character set feature

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
                                 <option>128</option>
                             </select>
                         </div>
+                        <p>Which types of characters would you like to include?</p>
+                        <div class="form-group">
+                            <input type="checkbox" id="uppercase" checked> Uppercase letters<br>
+                            <input type="checkbox" id="lowercase" checked> Lowercase letters<br>
+                            <input type="checkbox" id="numbers" checked> Numbers<br>
+                            <input type="checkbox" id="special" checked> Special characters<br>
+                        </div>
+
+
                         <button class="btn btn-custom" id="generateBtn" style="margin-bottom: 2%;">Generate</button>
                         <div class="form-group">
                             <textarea class="form-control" id="password" rows="6" readonly
