--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-    <meta property="og:title" content="MintPass">
-    <meta property="og:description" content="MintPass is a password generator page with ease of access.">
+    <meta property="og:title" content="MintPass - Easy Access Password Generator">
+    <meta property="og:description"
+        content="Generate secure passwords in seconds with MintPass, your easy-to-use password generator.">
     <meta property="og:image" content="">
     <meta property="og:url" content="https://mintpass.me">
     <meta name="description" content="MintPass is a password generator page with ease of access.">
-    <meta name="keywords" content="password, generator, passgen, password generator, MintPass">
+    <meta name="keywords"
+        content="password, generator, passgen, password generator, MintPass, secure password, strong password, random password">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
