Add logo to Index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+
+    <img id="logo" src="assets/images/logo1024_w_1024.png" alt="passmint logo">
+
     <div class="container">
         <div class="row justify-content-center align-items-center" style="height:100vh">
             <div class="col-12 col-sm-10 col-md-8 col-lg-10">
